src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dwU-dhU-b-wfsAN-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault column width: U\ndefault window height: U\nborder on\nwant fullscreen: AN\ntabbed"
expression: snapshot
---
initial configure:
size: 1231 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1231 × 680, bounds: 1231 × 680, states: [Activated]
